package com.javalab.rps;

/**
 * じゃんけん1回分の勝敗結果(プレイヤー視点)。
 */
public enum Result {
    PLAYER_WIN,
    COMPUTER_WIN,
    DRAW
}
